syntax = "proto3";
option go_package = "./dataNode";

service DataNode {
  rpc Create (CreateReq) returns (CreateRes) {}
  rpc QueryStorage(QueryStorageReq) returns (QueryStorageRes){}
  rpc Rollback(RollbackReq) returns (RollbackRes){} 
}

message NodeInfo{
  enum NodeReplicationStatus {
    SUCCESS = 0;
    FAILED = 1;
    PENDING = 2;
  }
  string nodeID = 1;
  string address = 2;
  uint32 grpcPort = 3;
  NodeReplicationStatus replicationStatus = 4;
}

message CreateReq {
  string iNodeID = 1;
  string blockID = 2;
  bytes blocksData = 3;
  uint32 replicationTarget = 4;
  uint32 currentReplicated = 5;
  repeated NodeInfo replicationNodeTarget = 6;
}

message CreateResDetail {
  string description = 1;
}

message CreateRes {
  enum CreateStatus {
    SUCCESS = 0;
    FAILED = 1;
  }
  CreateStatus status = 1;
  CreateResDetail detail = 2;
}

message QueryStorageReq {
  
}

message QueryStorageRes {
  uint64 total_storage = 1;
  uint64 actual_used_storage = 2;
}

message RollbackReq {
  string iNodeID = 1;
  string blockID = 2;
}

message RollbackRes {
  string description = 1;
}